--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
+     "types": ["node"],
+    "typeRoots": ["./node_modules/@types"],
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "./"
     
   },
   "include": ["src/**/*"]
