--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "dotenv"],
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
