--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-session": "^2.0.49",
+    "@types/dotenv": "^8.2.3",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/mongoose": "^5.11.97",
